# jdkenv

./: .gitignore  Cargo.toml  README.md  install.ps1
.github/workflows/: release.yml
src/: arch.rs  env_win.rs  foojay.rs  main.rs  paths.rs
src/commands/: current.rs  doctor.rs  global.rs  init.rs  install.rs  list.rs  local.rs  mod.rs  set.rs  setup.rs  uninstall.rs  update.rs
