[package]
name = "jdkenv"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
indicatif = "0.18.4"
junction = "2.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
ureq = "2"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Shell", "Win32_Security", "Win32_System_Threading", "Win32_System_Registry"] }
winreg = "0.56.0"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
